--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,7 @@ test:
   <<: *default
   database: kuchikomi_elevator_test
 
+<% if Rails.env.production? %>
 production:
   adapter: mysql2
   encoding: utf8mb4
@@ -21,3 +22,4 @@ production:
   username: <%= ENV.fetch('PROD_DB_USERNAME') %>
   password: <%= ENV.fetch('PROD_DB_PASSWORD') %>
   socket: <%= ENV.fetch('PROD_DB_SOCKET') %>
+<% end %>  
