--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -16,10 +16,12 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: kuchikomi_elevator_test
+          MYSQL_USER: root
+          MYSQL_PASSWORD: password
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping"
+          --health-cmd="mysqladmin ping -h localhost"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
