--- a/config/database.yml
+++ b/config/database.yml
@@ -2,6 +2,8 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: 127.0.0.1
+  port: 3306
 
 development:
   <<: *default
